[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Player.gd" type="Script" id=1]
[ext_resource path="res://art/player.png" type="Texture" id=2]
[ext_resource path="res://audio/die.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/pickup.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
[connection signal="died" from="." to="." method="playerDied"]
